# GCM-bot

./: .gitignore  Cargo.toml  README-kr.md  README.md
data/: intl-add.txt  intl-del.txt  jp-del.txt  jp_del.txt
data/aliases/en/: chuni.tsv  maimai.tsv  ongeki.tsv
data/aliases/ja/: chuni.tsv  maimai.tsv  ongeki.tsv
data/aliases/ko/: maimai.tsv
data/aliases/kr/: maimai.tsv
data/chuni/: chuni-intl-del.txt
data/maimai/: maimai-manual-add.txt
macro/: Cargo.toml
macro/src/: lib.rs
src/: chuni.rs  lib.rs  maimai.rs  main.rs  ongeki.rs  util.rs  utils.rs
