[package]
name = "gcm_bot"
version = "0.1.0"
authors = ["lomotos10"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] } # for async in general
poise = "0.2.2"
thiserror = "1.0.30"
lazy_static = "1.4.0"
curl = "0.4.43"
serde_json = "1.0.79"
itertools = "0.7.6"