[package]
name = "gcm_bot"
version = "0.1.0"
authors = ["lomotos10"]
edition = "2021"
default-run = "gcm_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] } # for async in general
poise = "0.2.2"
thiserror = "1.0.30"
lazy_static = "1.4.0"
curl = "0.4.43"
url = "2.2.2"
serde_json = "1.0.79"
itertools = "0.7.6"
strsim = "0.10.0"
ordered-float = "3.0.0"
walkdir = "2"
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
gcm-macro = {path = "macro"}
html_parser = "0.6.3"
chrono = "0.4"
urlencoding = "2.1.0"

[[bin]]
name = "mai-diff-differences"

[[bin]]
name = "mai-chart"

[[bin]]
name = "chuni-chart"

[[bin]]
name = "ongeki-chart"

[[bin]]
name = "sync-aliases"

[[bin]]
name = "grand-slam"
